inventory.css
#toggle-columns-btn {
  display: flex;
  align-items: center;
  gap: 6px;
  background-color: #5dade2;
  border: none;
  border-radius: 16px;
  padding: 8px 16px;
  color: white;
  font-size: 0.9rem;
  font-weight: 600;
  cursor: pointer;
  transition: all 0.3s ease;
  box-shadow: 0 1px 4px rgba(0, 123, 255, 0.25);
}

#toggle-columns-btn:hover {
  background-color: #0056b3;
  box-shadow: 0 3px 6px rgba(0, 123, 255, 0.35);
  transform: translateY(-1px);
}


.inventory {
  padding: 20px;
}


.inventory-header {
  display: flex;
  justify-content: flex-start; /* 元素靠左紧挨 */
  align-items: center;
  gap: 8px; /* 元素之间的间距 */
  margin-bottom: 10px;
}


#inventory-table-container {
  max-height: 800px;
  overflow-y: auto;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none;  /* IE and Edge */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

#inventory-table-container::-webkit-scrollbar {
  display: none; /* Chrome, Safari, and Opera */
}

.table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 0;
  background-color: white;
}

.table th,
.table td {
  border-bottom: 1px solid #e0e0e0;
  padding: 12px 15px;
  font-size: 14px;
  text-align: center;
}

.table th {
  background-color: #fafafa;
  position: -webkit-sticky; /* for Safari */
  position: sticky;
  top: 0;
  z-index: 1;
  font-weight: 600;
}

.jordon-container, .lineage-container {
  position: relative;
  padding: 20px;
  background-color: #fff; /* Light background for the content area */
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
}

.jordon-container h1, .lineage-container h1 {
  color: #333;
  margin-bottom: 20px;
  border-bottom: 2px solid #eee;
  padding-bottom: 10px;
}

.tab-button:hover {
  background-color: #f0f0f0;
  color: #3498db;
}

.table tr:hover {
  background-color: #f0f0f0;
}

.table .hidden {
  display: none;
}

.table th:nth-child(n+4),
.table td:nth-child(n+4) {
  text-align: center;
}

.modal-content h2 {
  margin-bottom: 20px;
}

.modal-content h3 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.close-button {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close-button:hover,
.close-button:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

#search-container {
  display: flex;
  align-items: center;
  background-color: #fff;
  border-radius: 16px;
  padding: 4px 12px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
  width: 25%;
  height: 40px;
}


#search-input {
  border: none;
  outline: none;
  background: transparent;
  width: 100%;
  font-size: 0.875rem; /* ~14px */
}

.table td:nth-child(2) {
  text-align: left;
}

